OPENWMS-28 changes in Maven dependencies to latest version and removals due to dependency to IO platform

--- a/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
@@ -57,13 +57,12 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa</artifactId>
-            <version>${org.eclipse.persistence.version}</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.weaving</artifactId>
             <version>${org.eclipse.persistence.version}</version>
-        </dependency>
+        </dependency-->
 
         <!-- Weaver -->
         <dependency>
