--- a/org.openwms.common/org.openwms.common.integration.jpa/pom.xml
+++ b/org.openwms.common/org.openwms.common.integration.jpa/pom.xml
@@ -47,10 +47,10 @@
         </dependency>
 
         <!-- JavaEE API -->
-        <dependency>
+        <!--dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>jta</artifactId>
-        </dependency>
+        </dependency-->
 
         <!-- JPA Provider -->
         <dependency>
