--- a/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -48,12 +48,12 @@
         <!-- JavaEE API -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>jta</artifactId>
-        </dependency>
+        </dependency-->
 
         <!-- Spring Framework -->
         <dependency>
@@ -138,6 +138,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.test</artifactId>
             <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
