--- a/org.openwms.tms/org.openwms.tms.service.spring/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.service.spring/pom.xml
@@ -49,12 +49,12 @@
         <!-- JavaEE API -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>jta</artifactId>
-        </dependency>
+        </dependency-->
 
         <!-- Weaver -->
         <dependency>
