--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,7 @@
                 <module>org.openwms.core</module>
                 <module>org.openwms.common</module>
                 <module>org.openwms.tms</module>
+                <module>org.openwms.wms</module>
                 <module>org.openwms.app</module>
             </modules>
         </profile>
@@ -289,6 +290,12 @@
             <id>tms</id>
             <modules>
                 <module>org.openwms.tms</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>wms</id>
+            <modules>
+                <module>org.openwms.wms</module>
             </modules>
         </profile>
         <profile>
