--- a/org.openwms.core/org.openwms.core.integration.jpa/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.jpa/pom.xml
@@ -41,11 +41,8 @@
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <scope>provided</scope>
         </dependency>
-        <!--dependency>
-            <groupId>javax.transaction</groupId>
-            <artifactId>jta</artifactId>
-        </dependency-->
 
         <!-- Spring Framework -->
         <dependency>
@@ -59,6 +56,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-instrument</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
