--- a/org.openwms.core/pom.xml
+++ b/org.openwms.core/pom.xml
@@ -62,13 +62,10 @@
             </activation>
             <modules>
                 <module>org.openwms.core.domain</module>
-                <module>org.openwms.core.client.rest</module>
+                <module>org.openwms.core.rest</module>
                 <module>org.openwms.core.test</module>
                 <module>org.openwms.core.infrastructure.configuration.provider</module>
-                <module>org.openwms.core.infrastructure.postgres</module>
                 <module>org.openwms.core.integration</module>
-                <module>org.openwms.core.integration.eclipselink</module>
-                <module>org.openwms.core.integration.hibernate</module>
                 <module>org.openwms.core.integration.file</module>
                 <module>org.openwms.core.integration.jpa</module>
                 <module>org.openwms.core.service.api</module>
@@ -80,13 +77,10 @@
             <id>core</id>
             <modules>
                 <module>org.openwms.core.domain</module>
-                <module>org.openwms.core.client.rest</module>
+                <module>org.openwms.core.rest</module>
                 <module>org.openwms.core.test</module>
                 <module>org.openwms.core.infrastructure.configuration.provider</module>
-                <module>org.openwms.core.infrastructure.postgres</module>
                 <module>org.openwms.core.integration</module>
-                <module>org.openwms.core.integration.eclipselink</module>
-                <module>org.openwms.core.integration.hibernate</module>
                 <module>org.openwms.core.integration.file</module>
                 <module>org.openwms.core.integration.jpa</module>
                 <module>org.openwms.core.service.api</module>
@@ -106,7 +100,7 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.core.client.rest</artifactId>
+                <artifactId>org.openwms.core.rest</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -123,22 +117,7 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.core.infrastructure.postgres</artifactId>
-                <version>${module.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.core.integration</artifactId>
-                <version>${module.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.core.integration.eclipselink</artifactId>
-                <version>${module.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.core.integration.hibernate</artifactId>
                 <version>${module.version}</version>
             </dependency>
             <dependency>
