CORE-18 CORE: Move architecture towards DDD

--- a/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -104,6 +104,10 @@
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.rest</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.util</artifactId>
         </dependency>
         <dependency>
