--- a/org.openwms.wms/pom.xml
+++ b/org.openwms.wms/pom.xml
@@ -53,21 +53,17 @@
                 </property>
             </activation>
             <modules>
-                <module>org.openwms.wms.domain</module>
-                <module>org.openwms.wms.integration</module>
-                <module>org.openwms.wms.integration.jpa</module>
-                <module>org.openwms.wms.service.api</module>
-                <module>org.openwms.wms.service.spring</module>
+                <module>org.openwms.wms.common</module>
+                <module>org.openwms.wms.rest</module>
+                <module>org.openwms.wms.service</module>
             </modules>
         </profile>
         <profile>
             <id>wms</id>
             <modules>
-                <module>org.openwms.wms.domain</module>
-                <module>org.openwms.wms.integration</module>
-                <module>org.openwms.wms.integration.jpa</module>
-                <module>org.openwms.wms.service.api</module>
-                <module>org.openwms.wms.service.spring</module>
+                <module>org.openwms.wms.common</module>
+                <module>org.openwms.wms.rest</module>
+                <module>org.openwms.wms.service</module>
             </modules>
         </profile>
     </profiles>
@@ -77,27 +73,17 @@
             <!-- Project dependencies -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.wms.domain</artifactId>
+                <artifactId>org.openwms.wms.common</artifactId>
                 <version>${wms.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.wms.integration</artifactId>
+                <artifactId>org.openwms.wms.rest</artifactId>
                 <version>${wms.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.wms.integration.jpa</artifactId>
-                <version>${wms.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.wms.service.api</artifactId>
-                <version>${wms.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.wms.service.spring</artifactId>
+                <artifactId>org.openwms.wms.service</artifactId>
                 <version>${wms.version}</version>
             </dependency>
         </dependencies>
