CORE-18 CORE: compiled successfully. next restructure part II

--- a/org.openwms.common/org.openwms.common.service/pom.xml
+++ b/org.openwms.common/org.openwms.common.service/pom.xml
@@ -78,7 +78,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.service.spring</artifactId>
+            <artifactId>org.openwms.core.service</artifactId>
             <version>${core.version}</version>
         </dependency>
 
