CORE-18 CORE: refactored inventory package, resized WMS module, introduced Spring Data JPA in upper layer

--- a/org.openwms.wms/org.openwms.wms.rest/pom.xml
+++ b/org.openwms.wms/org.openwms.wms.rest/pom.xml
@@ -39,7 +39,7 @@
         <!-- WMS Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.wms.common</artifactId>
+            <artifactId>org.openwms.wms.service</artifactId>
         </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
