--- a/org.openwms.wms/org.openwms.wms.bom/pom.xml
+++ b/org.openwms.wms/org.openwms.wms.bom/pom.xml
@@ -22,14 +22,17 @@
  */  
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openwms</groupId>
-        <artifactId>org.openwms.wms</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <artifactId>org.openwms</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
+        <relativePath />
     </parent>
-    <artifactId>org.openwms.wms.common</artifactId>
+    <artifactId>org.openwms.wms.bom</artifactId>
+    <version>0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>${project.artifactId}</name>
 
     <properties>
