--- a/org.openwms.wms/pom.xml
+++ b/org.openwms.wms/pom.xml
@@ -53,18 +53,16 @@
                 </property>
             </activation>
             <modules>
-                <module>org.openwms.wms.common</module>
+                <module>org.openwms.wms.bom</module>
                 <module>org.openwms.wms.rest</module>
-                <module>org.openwms.wms.service.api</module>
                 <module>org.openwms.wms.service</module>
             </modules>
         </profile>
         <profile>
             <id>wms</id>
             <modules>
-                <module>org.openwms.wms.common</module>
+                <module>org.openwms.wms.bom</module>
                 <module>org.openwms.wms.rest</module>
-                <module>org.openwms.wms.service.api</module>
                 <module>org.openwms.wms.service</module>
             </modules>
         </profile>
@@ -75,17 +73,7 @@
             <!-- Project dependencies -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.wms.common</artifactId>
-                <version>${wms.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.wms.rest</artifactId>
-                <version>${wms.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.wms.service.api</artifactId>
                 <version>${wms.version}</version>
             </dependency>
             <dependency>
