CORE-18 CORE: refactored CORE module towards DDD

--- a/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>validation-api</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
+
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
