CORE-18 CORE: refactored CORE module towards DDD

--- a/org.openwms.core/org.openwms.core.util/pom.xml
+++ b/org.openwms.core/org.openwms.core.util/pom.xml
@@ -42,5 +42,9 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ameba</groupId>
+            <artifactId>ameba-lib</artifactId>
+        </dependency>
     </dependencies>
 </project>
