--- a/org.openwms.core/pom.xml
+++ b/org.openwms.core/pom.xml
@@ -65,8 +65,8 @@
                 <module>org.openwms.core.domain</module>
                 <module>org.openwms.core.rest</module>
                 <module>org.openwms.core.test</module>
-                <module>org.openwms.core.infrastructure.configuration.provider</module>
-                <module>org.openwms.core.service</module>
+                <module>org.openwms.core.lang</module>
+                <module>org.openwms.core.search</module>
                 <module>org.openwms.core.uaa</module>
                 <module>org.openwms.core.util</module>
             </modules>
@@ -78,8 +78,8 @@
                 <module>org.openwms.core.domain</module>
                 <module>org.openwms.core.rest</module>
                 <module>org.openwms.core.test</module>
-                <module>org.openwms.core.infrastructure.configuration.provider</module>
-                <module>org.openwms.core.service</module>
+                <module>org.openwms.core.lang</module>
+                <module>org.openwms.core.search</module>
                 <module>org.openwms.core.uaa</module>
                 <module>org.openwms.core.util</module>
             </modules>
@@ -108,12 +108,12 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
+                <artifactId>org.openwms.core.lang</artifactId>
                 <version>${module.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.core.service</artifactId>
+                <artifactId>org.openwms.core.search</artifactId>
                 <version>${module.version}</version>
             </dependency>
             <dependency>
