--- a/org.openwms.core/org.openwms.core.lang/pom.xml
+++ b/org.openwms.core/org.openwms.core.lang/pom.xml
@@ -65,5 +65,11 @@
             <groupId>org.openwms</groupId>
             <artifactId>org.openwms.core.util</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.openwms</groupId>
+            <artifactId>org.openwms.core.test</artifactId>
+            <type>test-jar</type>
+        </dependency>
     </dependencies>
 </project>
