--- a/org.openwms.core/org.openwms.core.util/pom.xml
+++ b/org.openwms.core/org.openwms.core.util/pom.xml
@@ -55,5 +55,11 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.openwms</groupId>
+            <artifactId>org.openwms.core.test</artifactId>
+            <type>test-jar</type>
+        </dependency>
     </dependencies>
 </project>
