CORE-18 #1 CORE: removed util, core is compiling

--- a/org.openwms.core/org.openwms.core.configuration/pom.xml
+++ b/org.openwms.core/org.openwms.core.configuration/pom.xml
@@ -51,9 +51,20 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.openwms</groupId>
             <artifactId>org.openwms.core.test</artifactId>
             <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
