--- a/org.openwms.core/org.openwms.core.lang/pom.xml
+++ b/org.openwms.core/org.openwms.core.lang/pom.xml
@@ -30,7 +30,7 @@
         <artifactId>org.openwms.core</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
+    <artifactId>org.openwms.core.lang</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <description>This component wraps the org.openwms.core.lang.configuration component into a JAR file that is deployed in Non-OSGI
