org.openwms-20 fixed compilation

--- a/org.openwms.wms/org.openwms.wms.receiving/pom.xml
+++ b/org.openwms.wms/org.openwms.wms.receiving/pom.xml
@@ -29,7 +29,7 @@
 		<artifactId>org.openwms.wms</artifactId>
 		<version>0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.openwms.wms.rest</artifactId>
+	<artifactId>org.openwms.wms.receiving</artifactId>
 	<name>${project.artifactId}</name>
 	<properties>
 		<moduleDir>../../..</moduleDir>
