--- a/org.openwms.wms/pom.xml
+++ b/org.openwms.wms/pom.xml
@@ -53,17 +53,19 @@
                 </property>
             </activation>
             <modules>
-                <module>org.openwms.wms.bom</module>
-                <module>org.openwms.wms.rest</module>
+                <module>org.openwms.wms.inventory</module>
+                <module>org.openwms.wms.receiving</module>
                 <module>org.openwms.wms.service</module>
+                <module>org.openwms.wms.shipping</module>
             </modules>
         </profile>
         <profile>
             <id>wms</id>
             <modules>
-                <module>org.openwms.wms.bom</module>
-                <module>org.openwms.wms.rest</module>
+                <module>org.openwms.wms.inventory</module>
+                <module>org.openwms.wms.receiving</module>
                 <module>org.openwms.wms.service</module>
+                <module>org.openwms.wms.shipping</module>
             </modules>
         </profile>
     </profiles>
