--- a/org.openwms.core/org.openwms.core.util/pom.xml
+++ b/org.openwms.core/org.openwms.core.util/pom.xml
@@ -64,6 +64,11 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ameba</groupId>
+            <artifactId>ameba-lib</artifactId>
+            <scope>compile</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.openwms</groupId>
