--- a/pom.xml
+++ b/pom.xml
@@ -457,6 +457,7 @@
         <plugin.deploy.version>2.8.1</plugin.deploy.version>
         <plugin.enforcer.version>1.3.1</plugin.enforcer.version>
         <plugin.findbugs.version>2.3.1</plugin.findbugs.version>
+        <plugin.frontend-maven.version>0.0.23</plugin.frontend-maven.version>
         <plugin.gpg.version>1.6</plugin.gpg.version>
         <plugin.install.version>2.4</plugin.install.version>
         <plugin.jar.version>2.3.2</plugin.jar.version>
