--- a/org.openwms.core/org.openwms.core.configuration/pom.xml
+++ b/org.openwms.core/org.openwms.core.configuration/pom.xml
@@ -36,7 +36,7 @@
 
     <properties>
         <moduleDir>../..</moduleDir>
-        <start-class>org.openwms.core.configuration.Starter</start-class>
+        <start-class>org.openwms.core.Starter</start-class>
     </properties>
 
     <profiles>
